# DigitalImagingCloud

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
src/digitalimagingcloud/: cloud_uploader.py  file_watcher.py  ftp_server.py  main.py  upload_manager.py
src/digitalimagingcloud/utils/: config_loader.py  logging_config.py
